--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For My Love ❤️</title>
+    <title>For My Chutku Baby ❤️</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <style>
@@ -158,7 +158,7 @@
                 <img src="https://i.ibb.co/2YhnCDJp/IMG-8390.avif" class="slide">
             </div>
 
-            <p>Will you be my partner in crime for 2026?</p>
+            <p>Will you be my partner in Everything for 2026?</p>
 
             <div class="choices-box">
                 <button id="yesBtn">YES! 😍</button>
@@ -167,8 +167,8 @@
         </div>
 
         <div id="successView" class="hidden">
-            <h1 style="font-size: 3rem;">YAY! ❤️</h1>
-            <p style="font-size: 1.2rem;">I knew you couldn't resist! 😉</p>
+            <h1 style="font-size: 3rem;">YAY BAABU I LOVE YOU! ❤️</h1>
+            <p style="font-size: 1.2rem;">I knew you couldn't say No! 😉</p>
             <div style="border: 2px dashed var(--dark-pink); padding: 15px; border-radius: 15px;">
                 <h3 style="color: var(--dark-pink);">Happy New Year, My Love!</h3>
                 <p>2025 was amazing because of you. I can't wait to irritate you a little more in 2026!</p>
@@ -178,7 +178,7 @@
     </div>
 
     <div id="guiltLine">
-        Baby, how can you do this? Try again! 🥺👉👈
+        Baabu, how can you do this? Try again! 🥺👉👈
     </div>
 
     <script>
@@ -255,4 +255,5 @@
         });
     </script>
 </body>
+
 </html>
