--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <div class="container" id="mainBox">
         <div id="proposalView">
-            <h1>One Final Question... 🧐</h1>
+            <h1>There's a Question for you my Chutku Mutku... 🧐</h1>
             
             <div class="slideshow-frame">
                 <img src="https://i.ibb.co/Jwd5SRwY/IMG-8378.avif" class="slide active">
@@ -257,3 +257,4 @@
 </body>
 
 </html>
+
